deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fueled-fun-app
  name: service-frontend
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: frontend
